# beuvy

./: Cargo.toml  README.md
beuvy-runtime/: Cargo.toml  README.md
beuvy-runtime/examples/: basic_controls.rs  button_states.rs  content_core.rs  control_events.rs  form_core.rs  utility_classes.rs
beuvy-runtime/src/: backdrop.rs  build_pending.rs  button.rs  focus.rs  form_item.rs  image.rs  input.rs  lib.rs  link.rs  scroll.rs  style.rs  style_access.rs  style_apply.rs  style_state_patch.rs  stylesheet.rs  text.rs  theme_config.rs
beuvy-runtime/src/button/: build.rs  state.rs  theme.rs
beuvy-runtime/src/image/: build.rs
beuvy-runtime/src/input/: build.rs  clipboard.rs  edit.rs  edit_boundary.rs  edit_word.rs  range.rs  state.rs  state_ime.rs  state_keyboard.rs  state_metrics.rs  state_pointer.rs  state_visuals.rs  text.rs  text_engine.rs  value.rs
beuvy-runtime/src/link/: build.rs  state.rs
beuvy-runtime/src/select/: build.rs  mod.rs  model.rs  systems.rs
beuvy-runtime/src/select/systems/: open.rs  placement.rs  sync.rs  tests.rs  visual.rs
beuvy-runtime/src/state_style/: mod.rs  model.rs  pointer.rs  resolve.rs  tests.rs
beuvy-runtime/src/state_style/transition/: animate.rs  mod.rs
beuvy-runtime/src/styles/: base.css  button.css  form_item.css  input.css  select.css
beuvy-runtime/src/stylesheet/: model.rs  parser.rs  runtime.rs  tests.rs  tokens.rs  utility.rs
beuvy-runtime/src/text/: build.rs  sync.rs
beuvy-runtime/src/theme_config/: color.rs  config_types.rs
beuvy-runtime/src/utility/: builtin.rs  builtin_border_radius.rs  builtin_layout.rs  builtin_size_spacing.rs  builtin_text.rs  builtin_variant.rs  builtin_visual.rs  mod.rs  parser.rs  tests.rs  types.rs
src/: ast.rs  error.rs  lib.rs  style.rs  value.rs
src/basic/: button.rs  container.rs  div.rs  hr.rs  image.rs  input.rs  label.rs  link.rs  mod.rs  select.rs  text.rs
src/parser/: action.rs  attr.rs  condition.rs  entry.rs  mod.rs  node.rs  onclick.rs  repeat.rs  runtime_expr.rs  script.rs  style.rs  style_binding.rs
src/parser/runtime_expr/: parser_block.rs  parser_core.rs
src/runtime/: asset.rs  bindings.rs  context.rs  controls.rs  mod.rs  refs.rs  shell.rs  spawn.rs  state.rs  style.rs  sync.rs  text.rs
src/runtime/semantic/: fieldset.rs  form.rs  label.rs  mod.rs
src/runtime/sync/: class.rs  disabled.rs  events.rs  expression.rs  label.rs  local_state.rs  media.rs  ref_rect.rs  refs.rs  resolve.rs  scroll.rs  style.rs  tests.rs  text.rs  value.rs  visibility.rs
src/runtime/sync/expression/: helpers.rs
