[package]
name = "beuvy-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "A low-level Bevy UI kit with reusable controls and utility-class styling."
license.workspace = true
readme = "README.md"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/beuvy-runtime"
keywords = ["bevy", "ui", "gamedev", "utility", "controls"]
categories = ["game-development", "gui"]

[dependencies]
bevy = { workspace = true }
bevy-localization = { workspace = true }
serde = { workspace = true }
